# buff

./: .clang-tidy
buff_package/rm_buff/: CMakeLists.txt  general.hpp  package.xml
buff_package/rm_buff/include/: ceresSolver.hpp  fan_tracking.hpp  filter.hpp
buff_package/rm_buff/params/coordsolver/: coord_param.yaml
buff_package/rm_buff/src/: buff_node.cpp  buff_node.hpp  pub.cpp  sub.cpp
buff_package/rm_buff/src/buff/: buff.cpp  buff.h  buff.hpp
buff_package/rm_buff/src/ceres-solver/: ceresSolver.cpp  ceresSolver.hpp
buff_package/rm_buff/src/coordsolver/: README.md  coordsolver.cpp  coordsolver.h  coordsolver.hpp
buff_package/rm_buff/src/detector/: detector.cpp  detector.hpp
buff_package/rm_buff/src/fan_track/: fan_tracking.cpp  fan_tracking.hpp
buff_package/rm_buff/src/fan_tracker/: fan_tracker.cpp
buff_package/rm_buff/src/fan_tracker_copy/: fan_tracker.cpp  fan_tracker.h
buff_package/rm_buff/src/filter/: filter.cpp
buff_test/: CMakeLists.txt  buff.cpp  buff.hpp  fan_tracking.cpp  fan_tracking.hpp
